--- a/manifest.plist
+++ b/manifest.plist
@@ -12,19 +12,19 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://github.com/ngocbonggaming/esign-vietnam-electricity/raw/refs/heads/main/ESign-NgocBong_5.0.2.ipa</string>
+          <string>https://github.com/ngocbonggaming88/esign/raw/refs/heads/main/ESign-NgocBong_5.0.2_1766727180.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>ngocbonggaming.ksign.vip</string>
+        <string>com.12345</string>
         <key>bundle-version</key>
-        <string>1.3</string>
+        <string>5.0.2</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>Ksign</string>
+        <string>ESign-NgocBong</string>
       </dict>
     </dict>
   </array>
